# sensai

./: .env.example  .gitignore  LICENSE  client_requirements.txt  main.py  pyproject.toml  requirements.txt  run_server.bat  setup.py
client/agents/common/: base.py  result_handler.py  runner.py  tools.py  types.py  utils.py
client/agents/sql_agent/: agents.py  main.py  models.py  tools.py
client/agents/visualization_agent/: agents.py  main.py  prompts.py  tools.py  utils.py
client/common/: utils.py
client/tests/: chaining_parse.py  instructor_test.py  main.py  schema.py  simple_test.py  test_instructor_client.py  test_instructor_next_agent.py  test_openai_client.py  test_sql_agent.py  test_sql_api_endpoint.py  test_sql_data_model.py  test_sql_to_viz_workflow.py  test_sql_to_viz_workflow_01.py  test_sql_to_viz_workflow_02.py  test_sql_to_viz_workflow_03.py  test_sql_to_viz_workflow_04.py  test_sql_to_viz_workflow_05.py  test_sql_to_viz_workflow_06.py  test_sql_to_viz_workflow_07.py  test_sql_to_viz_workflow_one_run.py  test_sql_tools.py  test_sql_workflow.py
client/workflows/: sql_to_viz.py
docs/: local-setup.mdx
server/api/common/: monitor.py
server/api/endpoints/: ds18b20.py
server/config/: config.py  configs.py
server/db/: manager.py  schemas.py  supabase_client.py
server/sensors/ds18b20/: app.py  main.py  models.py  tools.py
server/tests/test_api/: test_server.py  test_temperature_endpoints.py  test_temperature_sql_api.py
shared/: logger_setup.py  utils.py
