[project]
name = "sensai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "colorlog>=6.9.0",
    "isort>=6.0.1",
    "openai>=1.69.0",
    "pydantic>=2.11.0",
    "requests>=2.32.3",
    "setuptools>=78.1.0",
]
