[project]
name = "sensai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "colorlog>=6.9.0",
    "decouple>=0.0.7",
    "fastapi>=0.115.12",
    "isort>=6.0.1",
    "openai>=1.69.0",
    "plotly>=6.0.1",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.0",
    "python-decouple>=3.8",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "setuptools>=78.1.0",
    "supabase>=2.15.0",
    "uvicorn>=0.34.0",
]
